2005-12-18  Roger While <simrw@sim-basis.de>

	* All : cleanup of "shadowed" variables
	  codegen.c : File struct initialization
		      Save/restore params for sticky-linkage
		      Generate Ebcdic table when needed

2005-12-13  Roger While <simrw@sim-basis.de>

	* codegen.c : sticky-linkage changes

2005-12-13  Roger While <simrw@sim-basis.de>

	* codegen.c : Do not statically initialize the file structure
	  cobc.c : Change long_opt "version" to "Version"
	  parser.y : Extra EXTERNAL checking

2005-12-09  Roger While <simrw@sim-basis.de>

	* cobc.c : Show a warning to use '-x' for executables.
	  typeck.c : Implement new display code.

2005-12-08  Roger While <simrw@sim-basis.de>

	* cobc.h : New defines - COB_SMALL_BUFF, COB_MEDIUM_BUFF,
		   COB_LARGE_BUFF
	* Relevant files : Replace all occurences of FILENAME_MAX/BUFSIZ
	* codegen.c : Do not use arrays for cob_decimal
	* flags.def : Mark -fmain as deprecated
	* cobc.c : Implement '-x' option (Create executable).
		   Harden buffer checking for command lines.
		   Check illegal option combinations.

2005-12-05  Roger While <simrw@sim-basis.de>

	* tree.c : Take out unnecessary zero clears
		   (Done by cob_malloc)
	  cobc.c : Use the executable extension when stripping

2005-12-04  Roger While <simrw@sim-basis.de>

	* tree.c : Fix buffer usage
	  typeck.c : Fix strftime for MingW

2005-12-04  Roger While <simrw@sim-basis.de>

	* codegen.c : Fix INITIALIZE

2005-11-28  Roger While <simrw@sim-basis.de>

	* parser.y, tree.c, typeck.c : Improve error checking
	  codegen.c : Fix -debug code generation

2005-11-25  Roger While <simrw@sim-basis.de>

	* scanner.l, pplex.l : clean up
	  cobc.c : Don't use mkstemp on non-Win
		   Tidy cleanup code
		   Add in bs2000 to help text
		   getopt includes
		   Put back in -fno-gcse
	  codegen.c : Preliminary sticky-linkage code
		      Further mods for perform-osvs

2005-11-09  Roger While <simrw@sim-basis.de>

	* parser.y, tree.h, tree.c : Implement SAME RECORD
